--- a/src/main/resources/templates/nosotros.html
+++ b/src/main/resources/templates/nosotros.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="section">
-        <h2>Nuestros Servicios</h2>
+        <h2><br>Nuestros Servicios</h2>
         <p><strong>Venta de Productos Informáticos:</strong> Contamos con un extenso catálogo de hardware, software y accesorios de marcas reconocidas.</p>
         <p><strong>Ensamblaje de Computadoras:</strong> Servicios personalizados para gaming, trabajo profesional o uso personal.</p>
         <p><strong>Revisión y Mantenimiento:</strong> Revisiones completas y mantenimiento de equipos para asegurar su óptimo funcionamiento.</p>
@@ -62,10 +62,10 @@
     </div>
 
     <div class="section">
-        <h2>Visítanos</h2>
+        <h2><br>Visítanos</h2>
         <p>Te invitamos a visitar nuestra tienda y descubrir todo lo que Grama tiene para ofrecerte. Estamos comprometidos con la satisfacción del cliente y la calidad de nuestros productos y servicios.</p>
     </div>
-    <h2>Nuestro equipo de trabajo</h2>
+    <h2><br>Nuestro equipo de trabajo</h2>
 
 
 
