--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -154,11 +154,7 @@
                             <form th:action="@{/producto/guardar}" th:object="${producto}"
                                   method="POST" class="was-validated" enctype="multipart/form-data">
                                 <div class="form-floating mb-3">
-                                    <input type="number" class="form-control rounded-3" id="id" name="id" placeholder="id" required="true"/>
-                                    <label for="id">[[#{producto.id}]]</label>
-                                </div>                                
-                                <div class="form-floating mb-3">
-                                    <input type="number" class="form-control rounded-3" id="producto" name="producto" placeholder="producto" required="true"/>
+                                    <input type="number" class="form-control rounded-3" id="categoria" name="categoria" placeholder="categoria" required="true"/>
                                     <label for="categoria">[[#{producto.categoria}]]</label>
                                 </div>  
                                 <div class="form-floating mb-3">
@@ -179,10 +175,12 @@
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input class="form-control rounded-3" type="file" name="imagenFile" id="imagenFile" onchange="readURL(this);"/>
-                                    <label for="imagen"></label>
+                                    <label for="imagen">[[#{producto.rutaImagen}]]</label>
                                     <img id="blah" src="#" alt=" " height="200" class="mt-3"/>
                                 </div>
-                                <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">[[#{accion.guardar}]]</button>
+                                <div class="modal-footer">
+                                    <button class="btn btn-primary" type="submit">Guardar</button>
+                                </div>
                             </form>
                         </div>
                     </div>
