--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,36 +8,42 @@
         </head>
         <body>
             <header th:replace="~{layout/plantilla :: header}"/>
-            <div class="container my-5">
-                <div class="row justify-content-center"> 
+            <!-- Sección que muestra cuadro para iniciar sesión -->
+            <div class="container mb-5">
+                <div class="row justify-content-center mt-5">
                     <div class="col-md-6">
-                        <div class="card rounded-4 shadow">
-                            <div class=" p-5 pb-4 border-bottom-0">
-                                <h1 class="fw-bold mb-0 fs-2">[[#{login.login}]]</h1>
-                            </div>
-                            <div class="card-body p-5 pt-0">
-                                <form method="POST" th:action="@{/login}" class="was-validated">
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control rounded-3" type="text" name="username" id="username" placeholder="username" required>
-                                            <label for="username"><i class="fas fa-user-lock"></i> [[#{login.username}]]:</label>
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center mb-4"><strong>Iniciar sesión</strong></h5>
+                                <form action="#" th:action="@{/login}" method="post" class="needs-validation" novalidate>
+
+                                    <div class="mb-3">
+                                        <label for="inputEmail" class="form-label"><strong>Email</strong></label>
+                                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Ingrese su email" required>
+                                        <div class="invalid-feedback">
+                                            Por favor ingresa un correo válido.
+                                        </div>
                                     </div>
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control rounded-3" type="password" name="password" id="password" placeholder="password" required>
-                                            <label for="password"><i class="fas fa-key"></i> [[#{login.password}]]:</label>
+
+                                    <div class="mb-3">
+                                        <label for="inputPassword" class="form-label"><strong>Contraseña</strong></label>
+                                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Contraseña" required>
+                                        <div class="invalid-feedback">
+                                            Por favor ingresa tu contraseña.
+                                        </div>
                                     </div>
-                                    <div class="d-flex justify-content-between">
-                                        <a th:href="@{/registro/nuevo}" class="btn btn-primary"><i class="fas fa-user-plus"></i> [[#{accion.registrar}]]</a>
-                                        <a th:href="@{/registro/recordar}" class="btn btn-info"><i class="fas fa-envelope"></i> [[#{accion.recordar}]]</a>
-                                        <button class="btn btn-success" type="submit"><i class="fas fa-sign-in-alt"></i> [[#{login.login}]]</button>
+
+                                    <div class="form-check mb-3">
+                                        <input type="checkbox" class="form-check-input" id="rememberMe">
+                                        <label class="form-check-label" for="rememberMe">Recuérdame</label>
                                     </div>
-                                </form>                            
-                            </div>
-                            <div th:if="${param.error != null}" class="p-5 pt-0">
-                                <h3 class="text-danger">[[#{error.login}]]</h3>
+
+                                    <button type="submit" class="btn btn-primary"><strong>Iniciar sesión</strong></button>
+                                </form>
                             </div>
                         </div>
                     </div>
-                </div>           
+                </div>
             </div>
             <footer th:replace="~{layout/plantilla :: footer}"/>
         </body>
