--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -25,11 +25,11 @@
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
                                 style="align-content: end; background-color:transparent; border: none; color: black; margin-top: 1.5px;"><strong>
-                                Menú Categorias </strong>
+                                Inventario </strong>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" style="color: black;"onclick="window.location.href = '/categoria/listad'">Categorias</a></li>
-                            <li><a class="dropdown-item" style="color: black;"onclick="window.location.href = '/producto/listado'"</a>Productos</li>                       
+                            <li><a class="dropdown-item" style="color: black;"onclick="window.location.href = '/categoria/listado'">Categorias</a></li>
+                            <li><a class="dropdown-item" style="color: black;"onclick="window.location.href = '/producto/listado'">Productos </a></li>
                         </ul>
                     </div>
 
