--- a/src/main/resources/templates/productoPage.html
+++ b/src/main/resources/templates/productoPage.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<head th:replace="~{layout/plantilla :: head}">
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+<section th:replace="~{categoria/fragmentos :: iniciarSesion}"/>
 
+<header th:replace="~{layout/plantilla :: header}"/>
+
+<div th:replace="~{productoPage/fragmentos :: producto}"/>
+
+
+<div th:replace="~{productoPage/fragmentos :: relacionado}"/>
+<div th:replace="~{productoPage/fragmentos :: carousel}"/>
+
+<footer th:replace="~{layout/plantilla :: footer}"/>
 </body>
 </html>
