Configuracion del correo de confirmacion

--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -242,16 +242,33 @@
 
 
             <div>
-                <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href = '/login'">
-                    <i></i> [[#{login.login}]]
-                </button>
-                <button type="button" class="btn btn-primary" onclick="window.location.href = '/register'">
-                    <i></i> [[#{usuario.agregar}]]
-                </button>
-                <button type="button" class="btn btn-primary" onclick="window.location.href = '/perfil'">
-                    <i class="fas fa-user"></i>
-                </button>
-
+                <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
+                    <li class="nav-item px-2">
+                        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href = '/login'">
+                            <i></i> [[#{login.login}]]
+                        </button>
+                        <button type="button" class="btn btn-primary" onclick="window.location.href = '/register'">
+                            <i></i> [[#{usuario.agregar}]]
+                        </button>
+                    </li>  
+                </ul>
+                <ul class="navbar-nav d-flex align-items-center" sec:authorize="isAuthenticated()">
+                    <li class="nav-item px-2">
+                        <form method="post" th:action="@{/logout}">
+                            <span text-black sec:authentication="name"></span>
+                            <img th:src="@{${session.usuarioImagen}}"
+                                 alt="Imágen del usuario"
+                                 height="40"
+                                 class="rounded-circle"/>
+                            <button class="btn btn-dark">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </button>
+                            <button type="button" class="btn btn-primary" onclick="window.location.href = '/perfil'">
+                                <i class="fas fa-user"></i>
+                            </button>                        
+                        </form>
+                    </li>
+                </ul>
             </div>
         </header>
 
