--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -166,15 +166,14 @@
                           method="POST" class="was-validated" enctype="multipart/form-data">
 
                         <div class="form-floating mb-3">
-                            <label for="categoria">[[#{producto.categoria}]]</label>
-                            <select class="form-select" aria-label="Default select example" name="categoria.id"
-                                    required="true">
-                                <option th:each="categoria: ${categorias}"
-                                        th:value="${categoria.id}">
+                            <select class="form-select rounded-3" aria-label="Default select example" name="categoria.id" id="categoria" required>
+                                <option th:each="categoria: ${categorias}" th:value="${categoria.id}">
                                     [[${categoria.nombre}]]
                                 </option>
                             </select>
+                            <label for="categoria">[[#{producto.categoria}]]</label>
                         </div>
+
 
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control rounded-3" id="nombre" name="nombre"
