--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,9 @@
     <section th:replace="~{layout/plantilla :: banner}" />
     <div th:replace="~{layout/plantilla :: busqueda}"></div>
 
-    <section th:replace="~{layout/plantilla :: container}">
-      <aside th:replace="~{layout/plantilla :: vendido}" />
+      <aside th:replace="~{layout/plantilla :: recomendado}" />
       <div th:replace="~{layout/plantilla :: compras}" />
-      <div th:replace="~{layout/plantilla :: description}"></div>
 
-    </section>
 
     <footer th:replace="~{layout/plantilla :: footer}" />
   </body>
