--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -4,6 +4,304 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{layout/plantilla :: head}">
     <title>fragmentos</title>
+    <style th:fragment="style">
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 10px;
+            max-width: calc(190px * 5 + 40px);
+            overflow-x: hidden;
+            justify-content: center;
+        }
+
+        .card {
+            position: relative; /* Necesario para posicionar el icono */
+            flex: 0 0 190px;
+            height: 500px;
+            width: 500px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            overflow: hidden;
+            transition: transform 0.3s, box-shadow 0.3s, filter 0.3s;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: rgba(0, 0, 0, 0.6) 0px 4px 8px, rgba(0, 0, 0, 0.5) 0px 14px 26px -3px, rgba(0, 0, 0, 0.4) 0px -6px 0px inset;
+            filter: brightness(0.7); /* Oscurece la tarjeta */
+        }
+
+        .card img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+        }
+
+        .card:hover .ui-bookmark {
+            opacity: 1; /* Muestra el icono en hover */
+        }
+
+        /* Inicio icono guardar */
+        /* From Uiverse.io by Galahhad */
+        .ui-bookmark {
+            --icon-size: 24px;
+            --icon-secondary-color: rgb(77, 77, 77);
+            --icon-hover-color: rgb(97, 97, 97);
+            --icon-primary-color: gold;
+            --icon-circle-border: 1px solid var(--icon-primary-color);
+            --icon-circle-size: 35px;
+            --icon-anmt-duration: 0.3s;
+
+            position: absolute; /* Posiciona el icono en relación a la tarjeta */
+            top: 10px; /* Ajusta el espacio desde la parte superior */
+            right: 10px; /* Ajusta el espacio desde el borde derecho */
+            z-index: 1; /* Asegura que el icono esté por encima de la imagen */
+            opacity: 0; /* Oculta el icono por defecto */
+            transition: opacity 0.3s; /* Transición suave para el icono */
+        }
+
+        .ui-bookmark svg {
+            width: 24px; /* Ajusta el tamaño del icono según sea necesario */
+            height: 24px;
+        }
+
+        .ui-bookmark input {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            display: none;
+        }
+
+        .ui-bookmark .bookmark {
+            width: var(--icon-size);
+            height: auto;
+            fill: var(--icon-secondary-color);
+            cursor: pointer;
+            -webkit-transition: 0.2s;
+            -o-transition: 0.2s;
+            transition: 0.2s;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            position: relative;
+            -webkit-transform-origin: top;
+            -ms-transform-origin: top;
+            transform-origin: top;
+        }
+
+        .bookmark::after {
+            content: "";
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            -webkit-box-shadow: 0 30px 0 -4px var(--icon-primary-color),
+            30px 0 0 -4px var(--icon-primary-color),
+            0 -30px 0 -4px var(--icon-primary-color),
+            -30px 0 0 -4px var(--icon-primary-color),
+            -22px 22px 0 -4px var(--icon-primary-color),
+            -22px -22px 0 -4px var(--icon-primary-color),
+            22px -22px 0 -4px var(--icon-primary-color),
+            22px 22px 0 -4px var(--icon-primary-color);
+            box-shadow: 0 30px 0 -4px var(--icon-primary-color),
+            30px 0 0 -4px var(--icon-primary-color),
+            0 -30px 0 -4px var(--icon-primary-color),
+            -30px 0 0 -4px var(--icon-primary-color),
+            -22px 22px 0 -4px var(--icon-primary-color),
+            -22px -22px 0 -4px var(--icon-primary-color),
+            22px -22px 0 -4px var(--icon-primary-color),
+            22px 22px 0 -4px var(--icon-primary-color);
+            border-radius: 50%;
+            -webkit-transform: scale(0);
+            -ms-transform: scale(0);
+            transform: scale(0);
+        }
+
+        .bookmark::before {
+            content: "";
+            position: absolute;
+            border-radius: 50%;
+            border: var(--icon-circle-border);
+            opacity: 0;
+        }
+
+        /* actions */
+
+        .ui-bookmark:hover .bookmark {
+            fill: var(--icon-hover-color);
+        }
+
+        .ui-bookmark input:checked + .bookmark::after {
+            -webkit-animation: circles var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+            animation: circles var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+            -webkit-animation-delay: var(--icon-anmt-duration);
+            animation-delay: var(--icon-anmt-duration);
+        }
+
+        .ui-bookmark input:checked + .bookmark {
+            fill: var(--icon-primary-color);
+            -webkit-animation: bookmark var(--icon-anmt-duration) forwards;
+            animation: bookmark var(--icon-anmt-duration) forwards;
+            -webkit-transition-delay: 0.3s;
+            -o-transition-delay: 0.3s;
+            transition-delay: 0.3s;
+        }
+
+        .ui-bookmark input:checked + .bookmark::before {
+            -webkit-animation: circle var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+            animation: circle var(--icon-anmt-duration) cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+            -webkit-animation-delay: var(--icon-anmt-duration);
+            animation-delay: var(--icon-anmt-duration);
+        }
+
+        @-webkit-keyframes bookmark {
+            50% {
+                -webkit-transform: scaleY(0.6);
+                transform: scaleY(0.6);
+            }
+
+            100% {
+                -webkit-transform: scaleY(1);
+                transform: scaleY(1);
+            }
+        }
+
+        @keyframes bookmark {
+            50% {
+                -webkit-transform: scaleY(0.6);
+                transform: scaleY(0.6);
+            }
+
+            100% {
+                -webkit-transform: scaleY(1);
+                transform: scaleY(1);
+            }
+        }
+
+        @-webkit-keyframes circle {
+            from {
+                width: 0;
+                height: 0;
+                opacity: 0;
+            }
+
+            90% {
+                width: var(--icon-circle-size);
+                height: var(--icon-circle-size);
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+            }
+        }
+
+        @keyframes circle {
+            from {
+                width: 0;
+                height: 0;
+                opacity: 0;
+            }
+
+            90% {
+                width: var(--icon-circle-size);
+                height: var(--icon-circle-size);
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+            }
+        }
+
+        @-webkit-keyframes circles {
+            from {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+
+            40% {
+                opacity: 1;
+            }
+
+            to {
+                -webkit-transform: scale(0.8);
+                transform: scale(0.8);
+                opacity: 0;
+            }
+        }
+
+        @keyframes circles {
+            from {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+
+            40% {
+                opacity: 1;
+            }
+
+            to {
+                -webkit-transform: scale(0.8);
+                transform: scale(0.8);
+                opacity: 0;
+            }
+        }
+
+        /* Fin icono guardar */
+
+
+        /* Ver el nombre al pasar el cursor*/
+        .content {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            position: absolute;
+            background: rgba(0, 0, 0, 0.6);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            transition: 0.6s;
+
+        }
+
+        .content:hover {
+            opacity: 1;
+        }
+
+        .content h1 {
+            font-size: 45px;
+            color: gray;
+            margin-bottom: 15px;
+        }
+
+        .content p {
+            font-size: 19px;
+            color: gray;
+        }
+
+        .content > * {
+            transform: translateY(25px);
+            transition: transform 0.6s;
+
+        }
+
+        .content:hover > * {
+            transform: translateY(0px);
+
+        }
+    </style>
 </head>
 <body>
 <!-- Fragmento del boton para agregar, llama una ventana modal-->
@@ -23,17 +321,22 @@
     </div>
 </section>
 
-<!-- Tarjetas-->
-<div class="container">
-    <div class="row justify-content-center ">
-        <div th:fragment="tarjetas" th:each="producto, contador : ${productos}" class="card mx-2 mb-3"
-             style="width: 18rem;">
-            <img th:src="${producto.rutaImagen}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${producto.nombre}"></h5>
-                <p class="card-text" th:text="${producto.descripcion}"></p>
-                <a th:href="@{/catalogo/{id}(id=${producto.id})}" class="btn btn-primary">Ir al producto</a>
+<div th:fragment="tarjetas" class="container mb-3 mt-3">
+    <div th:each="producto : ${productos}" class="card">
+        <label class="ui-bookmark">
+            <input type="checkbox">
+            <div class="bookmark">
+                <svg viewBox="0 0 32 32">
+                    <g>
+                        <path d="M27 4v27a1 1 0 0 1-1.625.781L16 24.281l-9.375 7.5A1 1 0 0 1 5 31V4a4 4 0 0 1 4-4h14a4 4 0 0 1 4 4z"></path>
+                    </g>
+                </svg>
             </div>
+        </label>
+        <img th:src="@{${producto.rutaImagen}}" alt="Imagen del producto">
+        <div class="content">
+            <h1 th:text="@{${producto.nombre}}"></h1>
+            <p th:text="@{${producto.descripcion}}"></p>
         </div>
     </div>
 </div>
